# veins

./: .clang-format  .cproject  .gitignore  .nedfolders  .oppbuildspec  .oppfeatures  .project  .uncrustify.cfg  CHANGELOG  COPYING2  INSTALL  Makefile  Makefile.linux  Makefile.mac  Makefile.win  README  README.MiXiM.txt  README.Veins.txt  README.md  README.txt  configure  configure.py  doxy.cfg  format-code.sh  makefrag  makefrag.vc  makemakefiles  mkmk  mkmk.cmd  mkmk.mac  print-veins-version  randomRoutes.sh  run  setenv  sumo-launchd.py  sumo-launchd2.py
.csettings/: org.omnetpp.cdt.gnu.config.debug.1760361527_cdtBuildSystem  org.omnetpp.cdt.gnu.config.debug.1760361527_org.eclipse.cdt.core.settings  org.omnetpp.cdt.gnu.config.release.1021697354_cdtBuildSystem  org.omnetpp.cdt.gnu.config.release.1021697354_org.eclipse.cdt.core.externalSettings  org.omnetpp.cdt.gnu.config.release.1021697354_org.eclipse.cdt.core.settings
.github/workflows/: linux.yml
base/: groups.h  makefrag  makefrag.vc  package.ned  sumo-launchd.py
configurator/: Makefile  miximConfiguratorCommon.c  miximConfiguratorCommon.h
configurator/textmode/: AUTHORS  ChangeLog  Makefile.am  Makefile.cvs  configure.in  mixim_generator.1  mixim_generator.c
doc/: doxy.cfg  groups.h  mainpage.h  package.ned  release-steps  version.sh
documentation/: INSTALL
examples/: debug_mf  package.ned  run_m  run_mf  run_mixim
include/: makefrag  makefrag.vc
inet/: .cproject  .nedfolders  .oppbuildspec  .project  Makefile  README  doxy.cfg
lib/: makefrag-lib.mac  makefrag-nolib.mac  makefrag.linux
modules/: makefrag
networks/: .gitignore
src/: index.h  makefrag  package.ned
tests/: makefrag  makefrag.vc  package.ned  runTests.sh
(+3454 files in other folders)
